package com.company;

public interface Colorable {
    public void howToColor();
}
