@startuml
interface Colorable {
+ void howToColor()
}

abstract class Shape {
+ {abstract}double calculateArea()
+ {abstract}double calculatePerimeter()
}

class Main {

}

class Circle {
- double radius
+ double calculateArea()
+ double calculatePerimeter()
}


class Rectangle {
- double width
- double height
+ double calculateArea()
+ double calculatePerimeter()
+ void howToColor()
}




Shape <|-- Circle
Colorable <|.. Rectangle
Shape <|-- Rectangle
@enduml